samples/_failures_safe/1761706624_f6c99b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76154f17.c: In function ‘handle_error_state’:
./samples/SAFE/__tmp_76154f17.c:150:19: error: ‘const struct EventData’ has no member named ‘event’
  150 |     if (event_data->event
      |                   ^~
./samples/SAFE/__tmp_76154f17.c:150:26: error: expected ‘)’ at end of input
  150 |     if (event_data->event
      |        ~                 ^
      |                          )
./samples/SAFE/__tmp_76154f17.c:150:5: error: expected declaration or statement at end of input
  150 |     if (event_data->event
      |     ^~
